Add Flat UI, fix checkboxes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,12 +9,5 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require flat-ui
  */
-body {
-    font-family: Tahoma, Geneva, sans-serif;
-}
-h1 {
-    font-size: 3em;
-    text-transform: uppercase;
-    text-align: center;
-}
