--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_tag '/votes' do |f| %>
   <% @elections.each do |election| %>
     <h2><%= election.name %></h2>
-    <h4>Select up to <%= election.num_choices - Vote.where('student_id = ?', @student.id).where(:candidate_id => election.candidates).count %> candidates</h4>
+    <h4>Select up to <%= election.choices_remaining @student %> candidate<% if election.choices_remaining(@student) != 1 %>s<% end %></h4>
     <% election.candidates.each do |candidate| %>
       <label class="checkbox" for="choice_<%= election.id %>_<%= candidate.id %>">
         <input type="checkbox" name="election_<%= election.id %>[]" value="<%= candidate.id %>" id="choice_<%= election.id %>_<%= candidate.id %>" data-toggle="checkbox">
@@ -11,7 +11,7 @@
     <% end %>
     <script>
       $("input[type=checkbox][name=election_<%= election.id %>\\[\\]]").click(function () {
-        var max = $("input[type=checkbox][name=election_<%= election.id %>\\[\\]]:checked").length >= <%= election.num_choices - Vote.where('student_id = ?', @student.id).where(:candidate_id => election.candidates).count %>;
+        var max = $("input[type=checkbox][name=election_<%= election.id %>\\[\\]]:checked").length >= <%= election.choices_remaining @student %>;
         $("input[type=checkbox][name=election_<%= election.id %>\\[\\]]").not(":checked").attr("disabled", max);
         $("input[type=checkbox][name=election_<%= election.id %>\\[\\]]").not(":checked").parent().toggleClass("disabled", max);
       });
