--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -19,5 +19,5 @@
   <% end %>
   <br />
   <input type="hidden" name="student_id" value="<%= @student.id %>" />
-  <input type="submit" value="Submit" onclick="return confirm('Are you sure?');" />
+  <input type="submit" value="Submit" class="btn btn-large" onclick="return confirm('Are you sure?');" />
 <% end %>
