--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Stuyvote</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= stylesheet_link_tag params[:controller] %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <h1>Stuyvote</h1>
+  <head>
+    <title>Stuyvote</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag params[:controller] %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Stuyvote</h1>
 
-  <% if notice %>
-    <div id="notice"><p><strong><%= notice %></strong></p></div>
-    <script type="text/javascript">setTimeout(function(){ $("#notice").hide() }, 5000);</script>
-  <% end %>
-  <% if alert %>
-    <div id="alert"><p><strong><%= alert %></strong></p></div>
-    <script type="text/javascript">setTimeout(function(){ $("#alert").hide() }, 5000);</script>
-  <% end %>
+      <% if notice %>
+        <div id="notice"><p><strong><%= notice %></strong></p></div>
+        <script type="text/javascript">setTimeout(function(){ $("#notice").hide() }, 5000);</script>
+      <% end %>
+      <% if alert %>
+        <div id="alert"><p><strong><%= alert %></strong></p></div>
+        <script type="text/javascript">setTimeout(function(){ $("#alert").hide() }, 5000);</script>
+      <% end %>
 
-  <% if admin_signed_in? and not (request.fullpath == '/' or request.fullpath.include? '/choose')  %>
-    <%= link_to 'Sign out', :destroy_admin_session, :method => :delete %>
-  <% end %>
+      <% if admin_signed_in? and not (request.fullpath == '/' or request.fullpath.include? '/choose')  %>
+        <%= link_to 'Sign out', :destroy_admin_session, :method => :delete %>
+      <% end %>
 
-<%= yield %>
+      <%= yield %>
 
-</body>
+    </div>
+  </body>
 </html>
