--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -1,6 +1,8 @@
+<%= link_to "Back", :elections, :class => 'btn' %>
+
 <h2><%= @election.name %> (<%= @election.enabled? ? 'Enabled' : 'Disabled' %>)</h2>
 
-<p><%= link_to "Edit", :edit_election %> <%= link_to 'Delete', {action: 'destroy', id: @election.id}, method: :delete, confirm: 'Are you sure?' %></p>
+<p><%= link_to "Edit", :edit_election, :class => 'btn' %> <%= link_to 'Delete', {action: 'destroy', id: @election.id}, :class => 'btn btn-danger', method: :delete, confirm: 'Are you sure?' %></p>
 
 <h3>Eligibility</h3>
 <ul>
@@ -13,7 +15,7 @@
 <p>Number of choices: <%= @election.num_choices %></p>
 
 <h3>Candidates</h3>
-<p><%= link_to "New", :new_candidate %></p>
+<p><%= link_to "New", :new_candidate, :class => 'btn' %></p>
 <ul>
   <% @election.candidates.order(:name).each do |candidate| %>
     <li><%= candidate.name %> <%= link_to 'Delete', {controller: 'candidates', action: 'destroy', id: candidate.id}, method: :delete, confirm: 'Are you sure?' %></li>
