--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
     <div class="container">
       <h1>Stuyvote</h1>
 
+      <% unless request.fullpath == '/' or request.fullpath == '/choose' %>
+        <div class="navbar navbar-inverse">
+          <div class="navbar-inner">
+            <div class="container">
+              <ul class="nav">
+                <li<% if request.fullpath.include? '/elections' %> class="active"<% end %>><%= link_to "Elections", :elections %></li>
+                <li<% if request.fullpath.include? '/students' %> class="active"<% end %>><%= link_to "Students", :elections %></li>
+              </ul>
+              <% if admin_signed_in? and not (request.fullpath == '/' or request.fullpath.include? '/choose')  %>
+                <ul class="nav pull-right">
+                  <li><%= link_to 'Sign out', :destroy_admin_session, :method => :delete %></li>
+                </ul>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+
       <% if notice %>
         <div class="alert alert-success" id="notice">
           <%= notice %>
