--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <div class="container">
               <ul class="nav">
                 <li<% if request.fullpath.include? '/elections' %> class="active"<% end %>><%= link_to "Elections", :elections %></li>
-                <li<% if request.fullpath.include? '/students' %> class="active"<% end %>><%= link_to "Students", :elections %></li>
+                <li<% if request.fullpath.include? '/students' %> class="active"<% end %>><%= link_to "Students", :students %></li>
               </ul>
               <% if admin_signed_in? and not (request.fullpath == '/' or request.fullpath.include? '/choose')  %>
                 <ul class="nav pull-right">
