--- a/app/views/elections/new.html.erb
+++ b/app/views/elections/new.html.erb
@@ -1,2 +1,34 @@
-<h1>Elections#new</h1>
-<p>Find me in app/views/elections/new.html.erb</p>
+<h2>New Election</h2>
+
+<%= form_for @election do |f| %>
+  <div class="control-group">
+    <%= f.label :name, class: 'control-label' %>
+    <%= f.text_field :name %>
+    <%= f.label :num_choices, 'Number of choices', class: 'control-label' %>
+    <%= f.number_field :num_choices %>
+    <label class="checkbox">
+      <%= f.check_box :enabled %>
+      Enabled
+    </label>
+    <h3>Eligibility</h3>
+    <label class="checkbox">
+      <%= f.check_box :freshmen_eligible %>
+      Freshmen
+    </label>
+    <label class="checkbox">
+      <%= f.check_box :sophomores_eligible %>
+      Sophomores
+    </label>
+    <label class="checkbox">
+      <%= f.check_box :juniors_eligible %>
+      Juniors
+    </label>
+    <label class="checkbox">
+      <%= f.check_box :seniors_eligible %>
+      Seniors
+    </label>
+  </div>
+  <div class="form-actions">
+    <%= f.submit 'Save', class: 'btn' %>
+  </div>
+<% end %>
