--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -1,6 +1,13 @@
 <%= link_to "Back", :elections, :class => 'btn' %>
 
-<h2><%= @election.name %> (<%= @election.enabled? ? 'Enabled' : 'Disabled' %>)</h2>
+<h2>
+  <%= @election.name %>
+  <% if @election.enabled? %>
+    <span class="label label-success">Enabled</span>
+  <% else %>
+    <span class="label label-important">Disabled</span>
+  <% end %>
+</h2>
 
 <p><%= link_to "Edit", :edit_election, :class => 'btn' %> <%= link_to 'Delete', {action: 'destroy', id: @election.id}, :class => 'btn btn-danger', method: :delete, confirm: 'Are you sure?' %></p>
 
