--- a/app/views/elections/index.html.erb
+++ b/app/views/elections/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Elections</h2>
-<p><%= link_to 'New', :new_election, :class => 'btn' %></p>
+<div style="text-align: right; margin-bottom: 10px; margin-top: -38px;"><%= link_to 'New', :new_election, :class => 'btn' %></div>
 
 <table class="table">
   <% @elections.each do |election| %>
