--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -1,5 +1,3 @@
-<%= link_to "Back", :elections, :class => 'btn' %>
-
 <h2>
   <%= @election.name %>
   <% if @election.enabled? %>
@@ -9,7 +7,13 @@
   <% end %>
 </h2>
 
-<p><%= link_to "Edit", :edit_election, :class => 'btn' %> <%= link_to 'Delete', {action: 'destroy', id: @election.id}, :class => 'btn btn-danger', method: :delete, confirm: 'Are you sure?' %></p>
+<p>
+<%= link_to "Back", :elections, :class => 'btn' %>
+<%= link_to "Edit", :edit_election, :class => 'btn' %>
+<%= link_to 'Delete', {action: 'destroy', id: @election.id}, :class => 'btn btn-danger', method: :delete, confirm: 'Are you sure?' %>
+</p>
+
+<h4>Number of choices: <%= @election.num_choices %></h4>
 
 <h3>Eligibility</h3>
 <ul>
@@ -19,18 +23,21 @@
   <li>Seniors: <%= @election.seniors_eligible ? 'Yes' : 'No' %></li>
 </ul>
 
-<p>Number of choices: <%= @election.num_choices %></p>
-
 <h3>Candidates</h3>
-<p><%= link_to "New", :new_candidate, :class => 'btn' %></p>
-<ul>
+<div style="text-align: right; margin-bottom: 10px; margin-top: -38px;"><%= link_to "New", :new_candidate, :class => 'btn' %></div>
+<table class="table">
   <% @election.candidates.order(:name).each do |candidate| %>
-    <li><%= candidate.name %> <%= link_to 'Delete', {controller: 'candidates', action: 'destroy', id: candidate.id}, method: :delete, confirm: 'Are you sure?' %></li>
+    <tr>
+      <td>
+        <%= candidate.name %>
+        <%= link_to 'Edit', {controller: 'candidates', action: 'edit', id: candidate.id} %>
+        <%= link_to 'Delete', {controller: 'candidates', action: 'destroy', id: candidate.id}, method: :delete, confirm: 'Are you sure?' %>
+      </td>
+    </tr>
   <% end %>
-</ul>
+</table>
 
-<h3>Results</h3>
-<p>Sorted by votes</p>
+<h3>Results <small>Sorted by votes</small></h3>
 <ul>
   <% @election.candidates.sort_by { |candidate| candidate.num_votes }.reverse.each do |candidate| %>
     <li><%= candidate.name %>: <%= candidate.num_votes %></li>
