--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Stuyvote</h1>
+      <% if request.fullpath == '/' or request.fullpath == '/choose' %>
+        <h1>Stuyvote</h1>
+      <% else %>
+        <h1>Stuyvote BoE Panel</h1>
+      <% end %>
 
       <% unless request.fullpath == '/' or request.fullpath == '/choose' %>
         <div class="navbar navbar-inverse">
@@ -43,10 +47,6 @@
       <% end %>
 
       <%= yield %>
-
-      <% if admin_signed_in? and not (request.fullpath == '/' or request.fullpath.include? '/choose')  %>
-        <%= link_to 'Sign out', :destroy_admin_session, :method => :delete %>
-      <% end %>
     </div>
   </body>
 </html>
