Reword "number of choices" as "number of selections".

--- a/app/views/elections/edit.html.erb
+++ b/app/views/elections/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="control-group">
     <%= f.label :name, class: 'control-label' %>
     <%= f.text_field :name %>
-    <%= f.label :num_choices, 'Number of choices', class: 'control-label' %>
+    <%= f.label :num_choices, 'Number of selections', class: 'control-label' %>
     <%= f.number_field :num_choices %>
     <label class="checkbox">
       <%= f.check_box :enabled %>
