--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -13,7 +13,7 @@
 <%= link_to 'Delete', {action: 'destroy', id: @election.id}, :class => 'btn btn-danger', method: :delete, confirm: 'Are you sure?' %>
 </p>
 
-<h4>Number of choices: <%= @election.num_choices %></h4>
+<h4>Number of selections: <%= @election.num_choices %></h4>
 
 <h3>Eligibility</h3>
 <ul>
