--- a/app/views/candidates/edit.html.erb
+++ b/app/views/candidates/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Candidates#edit</h1>
-<p>Find me in app/views/candidates/edit.html.erb</p>
+<h2>Edit Candidate</h2>
+
+<%= form_for @candidate do |f| %>
+  <%= f.label 'Election' %>
+  <input type="text" value="<%= @candidate.election.name %>" disabled />
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <div class="form-actions">
+    <%= f.submit 'Save', class: 'btn' %>
+  </div>
+<% end %>
