--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Candidates#new</h1>
-<p>Find me in app/views/candidates/new.html.erb</p>
+<h2>New Candidate</h2>
+
+<%= form_for @candidate do |f| %>
+  <%= f.label 'Election' %>
+  <input type="hidden" name="election_id" value="<%= params[:election_id] %>" />
+  <input type="text" value="<%= Election.find(params[:election_id]).name %>" disabled />
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <div class="form-actions">
+    <%= f.submit 'Save', class: 'btn' %>
+  </div>
+<% end %>
