--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -24,7 +24,7 @@
 </ul>
 
 <h3>Candidates</h3>
-<div style="text-align: right; margin-bottom: 10px; margin-top: -38px;"><%= link_to "New", :new_candidate, :class => 'btn' %></div>
+<div style="text-align: right; margin-bottom: 10px; margin-top: -38px;"><%= link_to "New", { controller: :candidates, action: :new, :election_id => @election.id }, :class => 'btn' %></div>
 <table class="table">
   <% @election.candidates.order(:name).each do |candidate| %>
     <tr>
