--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stuyvote</title>
+    <% if request.fullpath == '/' or request.fullpath == '/choose' %>
+      <title>Stuyvote</title>
+    <% else %>
+      <title>Stuyvote BoE Panel</title>
+    <% end %>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= stylesheet_link_tag params[:controller] %>
     <%= javascript_include_tag "application" %>
