Add more stats.

--- a/app/views/elections/show.html.erb
+++ b/app/views/elections/show.html.erb
@@ -37,9 +37,9 @@
   <% end %>
 </table>
 
-<h3>Results <small>Sorted by votes</small></h3>
-<ul>
+<h3>Results <small><%= Vote.where(candidate_id: @election.candidates).count %> votes total</small></h3>
+<ol>
   <% @election.candidates.sort_by { |candidate| candidate.num_votes }.reverse.each do |candidate| %>
-    <li><%= candidate.name %>: <%= candidate.num_votes %></li>
+    <li><%= candidate.name %> - <%= candidate.num_votes %><% if Vote.where(candidate_id: @election.candidates).count > 0 %> (<%= '%.1f' % (100.0 * candidate.num_votes / Vote.where(candidate_id: @election.candidates).count) %>%)<% end %></li>
   <% end %>
-</ul>
+</ol>
